--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
+    "eslint": "^7.9.0",
     "html-webpack-plugin": "^4.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "style-loader": "^1.2.1",
